--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="https://github.com/anafletcher" target="_blank">Alicia Fletcher</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/anafletcher/SheCodes-Weather-App-Project" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
