--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="https://github.com/anafletcher" target="_blank">Alicia Fletcher</a> and is
           <a href="https://github.com/anafletcher/SheCodes-Weather-App-Project" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://main--effulgent-kashata-79fbd5.netlify.app/#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
